# glasgow-constraint-solver

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  Doxyfile  Doxyfile.in  LICENCE  NOTE_FOR_AAAI25.md  README.md  TODO.md  TOOLING.md  TRUSTME.md  cxx23_feature_probe.cc  design.md  main.mk  pilot_benchmarks.sh  probably_bugs.md  requirements.txt  run_test_and_verify.bash  run_test_only.bash  run_tests.bash  trace.txt
examples/: CMakeLists.txt  benchmark_cli.hh
examples/at_most_1/: CMakeLists.txt  at_most_1.cc
examples/at_most_1_table/: CMakeLists.txt  at_most_1_table.cc
examples/auto_table/: CMakeLists.txt  auto_table.cc
examples/bin_packing/: CMakeLists.txt  bin_packing_bench.cc
examples/black_hole/: CMakeLists.txt  black_hole.cc
examples/break_table/: CMakeLists.txt  break_table.cc
examples/break_table_with_constants/: CMakeLists.txt  break_table_with_constants.cc
examples/break_views/: CMakeLists.txt  break_views.cc
examples/cake/: CMakeLists.txt  cake.cc  cake.mk
examples/cake_abs/: CMakeLists.txt  cake_abs.cc
examples/circuit_random/: CMakeLists.txt  circuit_random.cc
examples/circuit_small/: CMakeLists.txt  circuit_small.cc
examples/colour/: CMakeLists.txt  colour.cc  colour.mk
examples/crystal_maze/: CMakeLists.txt  crystal_maze.cc  crystal_maze.mk
examples/cumulative/: CMakeLists.txt  cumulative.cc
examples/dfa_mdd/: CMakeLists.txt  dfa_mdd.cc
examples/frequency_square/: CMakeLists.txt  frequency_square.cc
examples/highs_test/: CMakeLists.txt  highs_test.cc
examples/knapsack/: CMakeLists.txt  knapsack.cc  knapsack_bench.cc
examples/langford/: CMakeLists.txt  langford.cc  langford.mk
examples/lex/: CMakeLists.txt  lex.cc
examples/lex_table/: CMakeLists.txt  break_table.cc  lex_table.cc
examples/linear_prop_cost/: CMakeLists.txt  linear_prop_cost.cc
examples/linear_slack_bench/: CMakeLists.txt  linear_slack_bench.cc
examples/magic_series/: CMakeLists.txt  magic_series.cc  magic_series.mk
examples/magic_square/: CMakeLists.txt  magic_square.cc  magic_square.mk
examples/mini_black_hole/: CMakeLists.txt  mini_black_hole.cc
examples/money/: CMakeLists.txt  money.cc  money.mk
examples/mult_bc_vs_dc/: CMakeLists.txt  mult_bc_vs_dc.cc  plot_data.py
examples/multiplication_puzzle/: CMakeLists.txt  multiplication_puzzle.cc
examples/multiply_random/: CMakeLists.txt  multiply_random.cc
examples/n_fractions/: CMakeLists.txt  n_fractions.cc
examples/n_queens/: CMakeLists.txt  n_queens.cc  n_queens.mk
examples/negative_table_random/: CMakeLists.txt  negative_table_random.cc
examples/nonogram/: CMakeLists.txt  nonogram.cc
examples/odd_even_sum/: CMakeLists.txt  odd_even_sum.cc  odd_even_sum.mk
examples/ortho_latin/: CMakeLists.txt  ortho_latin.cc  ortho_latin.mk
examples/p_dispersion/: CMakeLists.txt  p_dispersion.cc  p_dispersion_instance.hh
examples/positive_table_random/: CMakeLists.txt  positive_table_random.cc
examples/qap/: CMakeLists.txt  qap.cc  qap.mk
examples/random_polynomial/: CMakeLists.txt  random_polynomial.cc
examples/random_regular/: CMakeLists.txt  random_regular.cc
examples/random_smart_tables/: CMakeLists.txt  random_smart_tables.cc
examples/regex/: CMakeLists.txt  regex.cc
examples/regular_random/: CMakeLists.txt  regular_random.cc
examples/reif_eq/: reif_eq.cc  reif_eq.mk
examples/rostering/: CMakeLists.txt  rostering.cc
examples/shikaku/: CMakeLists.txt  shikaku.cc
examples/skeleton_puzzle/: CMakeLists.txt  skeleton_puzzle.cc
examples/skyscrapers/: CMakeLists.txt  skyscrapers.cc  skyscrapers.mk
examples/slack_watch/: CMakeLists.txt  slack_watch.cc
examples/small_smart_table/: CMakeLists.txt  small_smart_table.cc
examples/smart_table_am1/: CMakeLists.txt  smart_table_am1.cc
examples/smart_table_lex/: CMakeLists.txt  smart_table_lex.cc
examples/smart_table_random/: CMakeLists.txt  random_smart_tables.cc  smart_table_random.cc
examples/smart_table_report_example/: CMakeLists.txt  smart_table_report_example.cc
examples/smart_table_small/: CMakeLists.txt  small_smart_table.cc  smart_table_small.cc
examples/soplex_test/: CMakeLists.txt  soplex_test.cc
examples/sort_count_probe/: CMakeLists.txt  sort_count_probe.cc
examples/stable_matching/: stable_matching.cc  stable_matching.mk
examples/sudoku/: CMakeLists.txt  sudoku.cc  sudoku.mk
examples/sum_all_different/: sum_all_different.cc  sum_all_different.mk
examples/synthetic_among/: CMakeLists.txt  synthetic_among.cc
examples/tables/: CMakeLists.txt  tables.cc
examples/talent/: CMakeLists.txt  talent.cc
examples/three_all_differents/: three_all_differents.cc  three_all_differents.mk
examples/tiny_circuit/: CMakeLists.txt  tiny_circuit.cc
examples/tour/: CMakeLists.txt  tour.cc
gcs/: CMakeLists.txt  array_param.hh  array_param_test.cc  bits.hh  boolean_variable.hh  branch_guess.hh  consistency.hh  constraint.cc  constraint.hh  constraint_id.hh  current_state.cc  current_state.hh  exception.cc  exception.hh  exception_test.cc  expression.hh  extensional.cc  extensional.hh  gcs.hh  gcs.mk  integer.hh  integer_test.cc  integer_variable.cc  integer_variable.hh  integer_variable_state.cc  integer_variable_state.hh  interval_set-fwd.hh  interval_set.hh  interval_set_test.cc  justification.hh  lifetime.hh  linear.cc  linear.hh  literal.cc  literal.hh  low_level_constraint_store.cc  low_level_constraint_store.hh  presolver.cc  presolver.hh  problem-fwd.hh  (+41 more)
minicp_benchmarks/: CMakeLists.txt  README.md
minizinc/: CMakeLists.txt  flatzinc_json_parser.hh  fzn_glasgow.cc  glasgow-for-debugging.msc  glasgow-for-tests.msc  glasgow.msc  run_fzn_json_test.bash  run_minizinc_test.bash
python/: CMakeLists.txt  gcspy.cc  gcspy.hh  pyproject.toml  python_test.py
scp/: CMakeLists.txt  glasgow_scp_solver.cc
test/: CMakeLists.txt  capture_encodings.py
verified_encodings/: CMakeLists.txt  run_cake_pb_cp.bash  run_scp_chain.bash
xcsp/: .gitignore  CMakeLists.txt  README.md  regenerate_expected.bash  run_xcsp_test.bash  xcsp_glasgow_constraint_solver.cc
(+1050 files in other folders)
