add_subdirectory(auto_table)
add_subdirectory(bin_packing)
add_subdirectory(cake)
add_subdirectory(colour)
add_subdirectory(circuit_small)
add_subdirectory(circuit_random)
add_subdirectory(crystal_maze)
add_subdirectory(cumulative)
add_subdirectory(frequency_square)
add_subdirectory(knapsack)
add_subdirectory(langford)
add_subdirectory(linear_prop_cost)
add_subdirectory(linear_slack_bench)
add_subdirectory(money)
add_subdirectory(multiply_random)
add_subdirectory(negative_table_random)
add_subdirectory(n_fractions)
add_subdirectory(nonogram)
add_subdirectory(odd_even_sum)
add_subdirectory(p_dispersion)
add_subdirectory(positive_table_random)
add_subdirectory(ortho_latin)
add_subdirectory(regular_random)
add_subdirectory(random_polynomial)
add_subdirectory(regex)
add_subdirectory(rostering)
add_subdirectory(slack_watch)
add_subdirectory(wake_cost)
add_subdirectory(shikaku)
add_subdirectory(skeleton_puzzle)
add_subdirectory(skyscrapers)
add_subdirectory(smart_table_am1)
add_subdirectory(smart_table_lex)
add_subdirectory(smart_table_random)
add_subdirectory(smart_table_small)
add_subdirectory(sudoku)
add_subdirectory(tables)
add_subdirectory(tour)
add_subdirectory(tutorial_proof)
add_subdirectory(talent)
